--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Your Name - Portfolio</title>
+
+    <!-- Google Font Import -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+    <!-- Your CSS file link -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <header>
         <img src="images/profile.jpg" alt="Your Profile Picture" class="profile-pic">
         <h1>Your Name</h1>
@@ -19,11 +26,13 @@
             </ul>
         </nav>
     </header>
+
     <main>
         <section class="intro">
             <h2>Welcome to My Portfolio</h2>
             <p>I'm a data-driven professional specializing in statistics and analytics. Explore my skills and projects below.</p>
         </section>
     </main>
+
 </body>
 </html>
