--- a/projects.html
+++ b/projects.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Projects</title>
+
+    <!-- Google Font Import -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+    <!-- Your CSS file link -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <header>
         <h1>My Projects</h1>
         <nav>
@@ -17,13 +24,18 @@
             </ul>
         </nav>
     </header>
+
     <main>
         <section>
             <h2>Project 1: Data Analysis Dashboard</h2>
-            <p>Developed an interactive dashboard to visualize trends in sales data.</p>
+            <p>Developed an interactive dashboard to visualize trends in sales data. The dashboard integrates with various data sources and enables users to explore key metrics, uncover insights, and make data-driven decisions.</p>
+        </section>
+
+        <section>
             <h2>Project 2: Machine Learning Model</h2>
-            <p>Built a predictive model to forecast customer churn using Python.</p>
+            <p>Built a predictive model to forecast customer churn using Python. This project involved data preprocessing, feature engineering, model training, and evaluation, resulting in a high-accuracy predictive model.</p>
         </section>
     </main>
+
 </body>
 </html>
