--- a/skills.html
+++ b/skills.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Skills</title>
+
+    <!-- Google Font Import -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+    <!-- Your CSS file link -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <header>
         <h1>My Skills</h1>
         <nav>
@@ -17,13 +24,18 @@
             </ul>
         </nav>
     </header>
+
     <main>
         <section>
             <h2>Data Analysis & Statistics</h2>
-            <p>Proficient in Python, R, SQL, and statistical modeling techniques.</p>
+            <p>Proficient in Python, R, SQL, and statistical modeling techniques. I have experience working with large datasets and applying various statistical methods to uncover insights and inform business decisions.</p>
+        </section>
+
+        <section>
             <h2>Machine Learning</h2>
-            <p>Experience with regression, classification, clustering, and NLP.</p>
+            <p>Experience with regression, classification, clustering, and Natural Language Processing (NLP). I have built predictive models and applied machine learning algorithms to real-world datasets.</p>
         </section>
     </main>
+
 </body>
 </html>
