--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact</title>
+
+    <!-- Google Font Import -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+    <!-- Your CSS file link -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <header>
         <h1>Contact Me</h1>
         <nav>
@@ -17,12 +24,15 @@
             </ul>
         </nav>
     </header>
+
     <main>
         <section>
             <h2>Get in Touch</h2>
-            <p>Email: your.email@example.com</p>
+            <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
             <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">My Profile</a></p>
+            <p>Feel free to reach out for any collaboration opportunities, questions, or just to connect. I look forward to hearing from you!</p>
         </section>
     </main>
+
 </body>
 </html>
