--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body oncontextmenu="return false">
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="#" class="nav__logo">Ananya</a>
+        <a href="#" class="nav__logo">Ananya Kamdar</a>
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list grid">
             <li class="nav__item">
@@ -124,8 +124,8 @@
                 Data Scientist
               </h3>
               <p class="home__description">
-                Fraud Analytics Consultant at
-                <strong>Guidehouse </strong>, New York.
+                <strong>Fraud Analytics Consultant</strong>at
+                 Guidehouse, New York.
               </p>
               <a href="#contact" class="button button--flex">
                 Contact me<i class="uil uil-message button__icon"></i>
