--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                 Data Scientist
               </h3>
               <p class="home__description">
-                <strong>Fraud Analytics Consultant</strong>at
-                 Guidehouse, New York.
+                <strong>Fraud Analytics Consultant</strong>
+                at Guidehouse.
               </p>
               <a href="#contact" class="button button--flex">
                 Contact me<i class="uil uil-message button__icon"></i>
@@ -154,7 +154,7 @@
 
           <div class="about__data">
             <p class="about__description">
-              I'm a third-year ISE undergraduate, passionate about technology and an avid reader. I have a self-motivated and can-do attitude, thriving in challenging and dynamic environments. Seeking a competitive position to enhance my skills and contribute to a professional organization. I'm very much passionate to learn new stuff that interests me and can help me to get better.
+              As a Fraud Analytics Consultant at Guidehouse, I apply data science techniques to detect fraud and help clients safeguard their operations. I specialize in using Python, R, and SQL to turn complex data into actionable insights. I’m passionate about using data to drive strategic decisions and optimize business strategies. Outside of work, I’m a Formula 1 fan and an adrenaline junkie!
             </p>
 
             <div class="about__info">
