--- a/index.html
+++ b/index.html
@@ -111,9 +111,10 @@
                   />
                   <image
                     class="home__blob-img"
-                    x="0"
+                    x="-20"
                     y="0"
                     xlink:href="assets/img/Pro.png"
+                    transform="scale(0.7)"
                   />
                 </g>
               </svg>
