--- a/index.html
+++ b/index.html
@@ -834,10 +834,7 @@
       <div class="footer__bg">
         <div class="footer__container container grid">
           <div>
-            <h1 class="footer__title">Venkatesh</h1>
-            <span class="footer__subtitle"
-              >Information Science Engineering Student</span
-            >
+            <h1 class="footer__title">Ananya Kamdar</h1>
           </div>
 
           <ul class="footer__links">
@@ -851,27 +848,9 @@
               <a href="#contact" class="footer__link">Contact-Me</a>
             </li>
           </ul>
-
-          <div class="footer__socials">
-            <a
-              href="https://www.instagram.com/venkateeshh/"
-              class="footer__social"
-              target="__blank"
-            >
-            <i class="fa-brands fa-instagram"></i>
-            </a>
-
-            <a
-              href="https://twitter.com/Venkateeshhh"
-              target="__blank"
-              class="footer__social"
-            >
-            <i class="fa-brands fa-x-twitter"></i>
-            </a>
-          </div>
         </div>
 
-        <p class="footer__copy">&#169; Venkatesh. All right reserved</p>
+        <p class="footer__copy">&#169; AnanyaKamdar. All right reserved</p>
       </div>
     </footer>
 
