--- a/index.html
+++ b/index.html
@@ -756,26 +756,13 @@
         <h2 class="section__title">Contact Me</h2>
         <span class="section__subtitle">Get in touch</span>
 
-        <div class="contact__container container grid">
-          <div>
-            <div class="contact__information">
-              <i class="uil uil-calling contact__icon"></i>
-
-              <div>
-                <h3 class="contact__title">Contact Me</h3>
-                <span class="contact__subtitle"
-                  ><a href="tel:6362243314"></a>6362243314</span
-                >
-              </div>
-            </div>
-
             <div class="contact__information">
               <i class="uil uil-envelope-minus contact__icon"></i>
 
               <div>
                 <h3 class="contact__title">Email</h3>
                 <span class="contact__subtitle"
-                  >rkamathvenkatesh@gmail.com</span
+                  >ananya.kamdar@columbia.edu</span
                 >
               </div>
             </div>
@@ -786,7 +773,7 @@
               <div>
                 <h3 class="contact__title">Location</h3>
                 <span class="contact__subtitle"
-                  >Manglore, Karnataka, India</span
+                  >New York City, USA</span
                 >
               </div>
             </div>
@@ -818,7 +805,7 @@
 
             <div>
               <a
-                href=" mailto: rkamathvenkatesh@gmail.com?subject=Testing out mailto! &body=This is only a test!"
+                href=" mailto: ananya.kamdar@columbia.edu?subject=Testing out mailto! &body=This is only a test!"
                 class="button button--flex"
               >
                 Send Message
